--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -1,4 +1,4 @@
-\subsection{\FirstTimeDefine{\ProgramGraph}{\ProgramGraphEN}} 
+\subsection{\ProgramGraph}
 \label{sec:sub:pg}
 
 {\software} ถูกพัฒนาขึ้นมาเพื่อแก้ไขปัญหาในบริบทที่หลากหลาย ส่งผลให้มีโครงสร้างของ{\sourcecode}นั้นแตกต่างกันไปตามบริบทการพัฒนา
@@ -87,7 +87,6 @@
 \code{student\_score = 50} ซึ่งข้อมูลทดสอบที่สร้างขึ้นนี้สามารถทำให้โปรแกรมทำงานใน{\TestPath}ได้ 
 ดังกรณีทดสอบใน\tabref{tab:simpleTestCase}
 
-\clearpage
 \begin{figure}[ht!]
     \centering
     \code{2\ - 3\ - (4)\ - (5)\ - 6\ - 10\ - 11\ - (12)\ - 13\ - 18 - 19}
@@ -185,5 +184,3 @@
 
 ดังนั้นการทดสอบโปรแกรมนั้นจึงจำเป็นจะต้องวิเคราะห์{\InfeasiblePath}ที่อยู่ภายในโครงสร้างของโปรแกรมเพื่อรายงานผลให้นักพัฒนาได้ทราบและแก้ไข
 ต่อไปได้
-
-\clearpage
