--- a/configures.tex
+++ b/configures.tex
@@ -42,6 +42,7 @@
 % - - - - - - - - - - - - - - - - - - - -
 % Graphic
 \usepackage{tikz}
+\usetikzlibrary{positioning}
 
 % - - - - - - - - - - - - - - - - - - - -
 % Nested enum
