--- a/configures.tex
+++ b/configures.tex
@@ -21,12 +21,14 @@
 \fancyhf{}
 \rhead{\thepage}
 \renewcommand{\headrulewidth}{0pt}
-% \fancyhead[LO]{}
-% \fancyhead[RE]{}
-% \fancyfoot[C]{\thepage} 
 
 \usepackage{subcaption}
 \captionsetup[sub]{}
+
+% - - - - - - - - - - - - - - - - - - - -
+% Adjust table caption at left
+\usepackage{tabularx}
+\usepackage[singlelinecheck=false]{caption}
 
 % - - - - - - - - - - - - - - - - - - - -
 % Code listing
