Add tabularx environment

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -213,13 +213,13 @@
     \centering
     \caption{ตัวอย่าง{\randomTestData}ที่ได้}
     \label{tab:GRTRandom}
-    \begin{tabular}{|l|c|c|}
+    \begin{tabularx}{\textwidth}{|@{}l| *2{>{\centering\arraybackslash}X|}@{}}
         \hline
         ตัวแปร                    & ประเภทข้อมูล   & ค่าที่สุ่มได้          \\ \hline
         \code{student\_score}    & {\it int}    & {\bf 75}         \\ \hline
         \code{bonus\_score}      & {\it int}    & {\bf 0}         \\ \hline
         \code{student\_id}       & {\it String} & {\bf "IUUUSISS"} \\ \hline
-    \end{tabular}
+    \end{tabularx}
 \end{table}
 
 % - - - - - - - - - - - - - - - - - - - -
