--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -99,14 +99,14 @@
     \centering
     \caption{กรณีทดสอบ}
     \label{tab:simpleTestCase}
-    \begin{tabular}{|l|c|c|c|}
+    \begin{tabularx}{\textwidth}{|*4{>{\centering\arraybackslash}X|}@{}}
         \hline
         \rowcolor{LightGray}
         Case ID     & bonus\_score  & student\_score    & Expected output \\
         \hline
         SC1         & 1             & 50                & U \\
         \hline
-    \end{tabular}
+    \end{tabularx}
 \end{table}
 
 \subsubsection{\FirstTimeDefine{\scg}{\scgEN}}
