Add more reference

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,70 @@
+@article{Hoffmann2016,
+    author = {Hoffmann, Andreas and Quante, Jochen and Woehrle, Matthias},
+    doi = {10.1109/ICSTW.2016.18},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/07528972.pdf:pdf},
+    isbn = {978-1-5090-3674-5},
+    journal = {2016 IEEE Ninth International Conference on Software Testing, Verification and Validation Workshops (ICSTW)},
+    mendeley-groups = {Testing},
+    pages = {269--274},
+    title = {{Experience Report: White Box Test Case Generation for Automotive Embedded Software}},
+    url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7528972},
+    year = {2016}
+}
+
+@article{Shirole2013,
+    abstract = {In software engineering, system modeling is the process of for-mulating a representation of a real system in an abstract way to understand its behavior. Software testing encourages reusing these models for testing purpose. This expedites the process of test case generation. UML structural and behavioral specification diagrams have been used by testing researchers for generation of test scenarios and test data. The aim of this survey is to improve the understanding of UML based testing techniques. We have focused on test case genera-tion from the behavioral specification diagrams, namely sequence, state chart and activity diagrams. We classify the various research approaches that are based on formal specifications, graph theo-retic, heuristic testing, and direct UML specification processing. We discuss the issues of test coverage associated with these ap-proaches.},
+    author = {Shirole, Mahesh and Kumar, Rajeev},
+    doi = {10.1145/2492248.2492274},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/p014-shirole.pdf:pdf},
+    issn = {01635948},
+    journal = {ACM SIGSOFT Software Engineering Notes},
+    keywords = {activity diagram,formal specifications based testing,graph theoretic testing,heuristic testing,sequence diagram,state machine diagram,test case generation},
+    mendeley-groups = {Testing},
+    number = {4},
+    pages = {1},
+    title = {{UML behavioral model based test case generation}},
+    url = {http://dl.acm.org/citation.cfm?doid=2492248.2492274},
+    volume = {38},
+    year = {2013}
+}
+
+@article{Panthi2012,
+    author = {Panthi, Vikas and Mohapatra, Durga Prasad},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/chp{\%}3A10.1007{\%}2F978-81-322-0740-5{\_}33.pdf:pdf},
+    mendeley-groups = {Testing},
+    pages = {277--284},
+    title = {{Automatic Test Case Generation}},
+    year = {2012}
+}
+
+@inproceedings{6847360,
+    abstract = {One of main points of software testing is test coverage analysis because defects may exist in uncovered parts and appear when users use the software. Test coverage analysis is one process which is used for solving the uncovered testing. This process consists of code instrumentation, collecting coverage data during test execution, and analyzing the coverage measure. Test coverage analysis has to be applied with every level of testing. In addition, it has to be performed to conventional software and object-oriented software. Nowadays, object-oriented software is more interesting. However, we cannot use existing integration testing coverage measures with object- oriented software. In our previous paper, we propose the design of a tool for analyzing integration testing coverage for object-oriented software. This paper we continue our work by proposing an integration testing coverage tool for object-oriented software. This tool can analyze the integration testing coverage of object- oriented software. Moreover, it can generate additional test cases in case of there are uncovered methods that have not been tested by existing test cases.},
+    author = {Augsornsri, P and Suwannasart, T},
+    booktitle = {2014 International Conference on Information Science Applications (ICISA)},
+    doi = {10.1109/ICISA.2014.6847360},
+    issn = {2162-9048},
+    keywords = {object-oriented programming;program testing;software tools;code instrumentation;coverage data;integration testing coverage measures;integration testing coverage tool;object-oriented software;software defects;software testing;test cases;test coverage analysis;test execution;tool design;uncovered testing;Data analysis;Instruments;Radiation detectors;Software;Testing;Unified modeling language;User interfaces},
+    mendeley-groups = {Testing},
+    pages = {1--5},
+    title = {{An Integration Testing Coverage Tool for Object-Oriented Software}},
+    year = {2014}
+}
+
+@article{Luanghirun2016,
+    abstract = {In modern web application development, JavaScript is the most popular programming language for implementation and test framework automation is usually applied in unit testing. However, developers spend a lot of time to create test script manually. Thus, creating automated test script tool can support them efficiently. Nonetheless, a tool for generating test script by randomly creating test input cannot guarantee that all paths of the code is executed and it takes significant of time on testing to reach a high code coverage. This paper proposes a tool for generating test cases from JavaScript function and executing test cases to cover all statements coverage criteria. The tool can analyze and instrument JavaScript code to generate a control flow graph and test cases by selecting data based on test paths and input vector to drive the paths, evaluate coverage, execute test cases, as well as display a test report.},
+    author = {Luanghirun, W and Suwannasart, T},
+    file = {:Users/sitdh/OneDrive/Thesis/Papers/Books/IMECS2016{\_}pp479-482-2.pdf:pdf},
+    isbn = {9789881925381},
+    journal = {Lecture Notes in Engineering and Computer Science},
+    keywords = {2,analyzing path predicate expression,automatic testing,by,for automatic,in this paper,input,javascript,path predicate expression,software testing,to generate test cases,vector,we propose a tool},
+    mendeley-groups = {Testing},
+    pages = {479--482},
+    title = {{Test cases generation tool for JavaScript based on statement coverage criteria}},
+    url = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-84978655460{\&}partnerID=40{\&}md5=18a368708b39636238ab98c808356467},
+    volume = {1},
+    year = {2016}
+}
+
 @book{Bang-Jensen2009,
     abstract = {In the previous chapters, we considered various properties of cycles in digraphs. In this chapter, we consider the question of how few vertices have to be deleted to get rid of all cycles. We will also consider the arc version of this question (i.e., to destroy all cycles we delete arcs rather than vertices). The last question leads us to the notion of an ‘optimal' ordering of a digraph which is of interest in various applications. We will see that the minimum number of vertices (arcs) required to destroy all cycles is related to the maximum number of vertex-disjoint (arc-disjoint) cycles in the digraph under consideration. We will also consider the question of decreasing the number of cycles by reversing arcs.},
     author = {Bang-Jensen, J{\o}rgen and Gutin, Gregory Z.},
