Add require package

--- a/configures.tex
+++ b/configures.tex
@@ -28,7 +28,9 @@
 % - - - - - - - - - - - - - - - - - - - -
 % Adjust table caption at left
 \usepackage{tabularx}
-\usepackage[singlelinecheck=false]{caption}
+\usepackage{caption}
+% \usepackage[singlelinecheck=false]{caption}
+\captionsetup[table]{singlelinecheck=false}
 
 % - - - - - - - - - - - - - - - - - - - -
 % Code listing
