Ommit edite log page

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -21,8 +21,8 @@
 
 \begin{document}
 
-    \input{edit-log}
-    \clearpage
+    % \input{edit-log}
+    % \clearpage
 
     \pagenumbering{arabic}
     \rhead{\thepage}
