Refine graphic size

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -8,7 +8,7 @@
 \begin{centering}
     \begin{figure}[ht!]
         \centering
-        \includegraphics[width=1.2\textwidth]{methodology-overview}
+        \includegraphics[width=\textwidth]{methodology-overview}
         \caption{ภาพรวมการดำเนินงานวิจัย}
         \label{fig:methodologyoverview}
     \end{figure}
